[gd_scene load_steps=5 format=2]

[ext_resource path="res://assets/fonts/LuckiestGuy-Regular.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://addons/DarkPlane.tres" type="Theme" id=2]
[ext_resource path="res://src/UI/win_dialog.gd" type="Script" id=3]

[sub_resource type="DynamicFont" id=1]
size = 30
font_data = ExtResource( 1 )

[node name="WinDialog" type="WindowDialog"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -314.0
margin_top = -239.0
margin_right = 314.0
margin_bottom = 239.0
theme = ExtResource( 2 )
script = ExtResource( 3 )

[node name="MarginContainer" type="MarginContainer" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -286.0
margin_top = -207.0
margin_right = 286.0
margin_bottom = 207.0

[node name="TimeLabel" type="Label" parent="MarginContainer"]
margin_top = 187.0
margin_right = 572.0
margin_bottom = 226.0
custom_fonts/font = SubResource( 1 )
text = "CONGRATULATIONS"
align = 1
valign = 1

[node name="GridContainer" type="GridContainer" parent="MarginContainer"]
margin_right = 572.0
margin_bottom = 414.0
columns = 2

[node name="TimeLabel" type="Label" parent="MarginContainer/GridContainer"]
margin_right = 202.0
margin_bottom = 39.0
custom_fonts/font = SubResource( 1 )
text = "STATS_TIME"

[node name="TimeValue" type="Label" parent="MarginContainer/GridContainer"]
unique_name_in_owner = true
margin_left = 545.0
margin_right = 572.0
margin_bottom = 39.0
size_flags_horizontal = 10
custom_fonts/font = SubResource( 1 )
text = "0"

[node name="ClicksLabel" type="Label" parent="MarginContainer/GridContainer"]
margin_top = 43.0
margin_right = 202.0
margin_bottom = 82.0
custom_fonts/font = SubResource( 1 )
text = "STATS_CLICKED"

[node name="ClickValue" type="Label" parent="MarginContainer/GridContainer"]
unique_name_in_owner = true
margin_left = 545.0
margin_top = 43.0
margin_right = 572.0
margin_bottom = 82.0
size_flags_horizontal = 10
custom_fonts/font = SubResource( 1 )
text = "0"

[node name="ModeLabel" type="Label" parent="MarginContainer/GridContainer"]
margin_top = 86.0
margin_right = 202.0
margin_bottom = 125.0
custom_fonts/font = SubResource( 1 )
text = "STATS_MODE"

[node name="ModeValue" type="Label" parent="MarginContainer/GridContainer"]
unique_name_in_owner = true
margin_left = 545.0
margin_top = 86.0
margin_right = 572.0
margin_bottom = 125.0
size_flags_horizontal = 10
custom_fonts/font = SubResource( 1 )
text = "0"
